# Satellite

satellite/: CMakeLists.txt  satellite.cpp  satellite.hpp
stellite/: sattelite.cpp  sattelite.hpp
